# render-deploy

./: build.sh  pyproject.toml
gallery/: admin.py  models.py  urls.py  views.py
gallery/templates/: base.html
mysite/: settings.py  urls.py
portfolio/: admin.py  api_views.py  models.py  serializer.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_auto_20221202_1039.py
render/: urls.py  views.py
render/templates/: index.html  port.html
